--- a/index.html
+++ b/index.html
@@ -95,21 +95,22 @@
 
         .modal-inner-padding { padding: 40px; clear: both; }
         
-        /* [수정] 세련된 이미지 효과 (디지털 액자 느낌) */
+        /* [수정] 이미지 컨테이너 테두리 제거 및 심플하게 변경 */
         .modal-img-container {
             width: 100%;
             height: 380px;
             background: #000;
-            border: 2px solid var(--accent);
+            /* 테두리 및 그림자 제거 */
+            border: none; 
+            box-shadow: none;
             margin-bottom: 35px;
             display: flex;
             align-items: center;
             justify-content: center;
             overflow: hidden;
             position: relative;
-            box-shadow: 0 0 20px var(--accent-dim), inset 0 0 50px rgba(0,0,0,1);
         }
-        /* 스캔라인 애니메이션 오버레이 */
+        /* 스캔라인 효과는 유지 (원하시면 이 부분도 제거 가능) */
         .modal-img-container::after {
             content: "";
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
@@ -123,25 +124,40 @@
             max-height: 95%;
             object-fit: contain;
             z-index: 1;
-            filter: drop-shadow(0 0 10px var(--accent)); /* 이미지 글로우 */
+            /* 이미지 자체의 글로우 효과도 제거 (필요시 복구 가능) */
+            filter: none; 
             transition: 0.5s ease;
         }
         .modal-img-container:hover .modal-img { transform: scale(1.02); }
 
-        /* 탭 가독성 강화 */
+        /* [수정] 탭 버튼 시인성 강화 스타일 */
         .asset-selector { 
             display: flex; gap: 12px; flex-wrap: wrap; justify-content: flex-start;
             position: sticky; top: 0; z-index: 1000;
-            background: #1c2128; padding: 25px 40px;
-            border-bottom: 3px solid var(--accent);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+            background: #161b22; /* 배경색을 조금 더 밝게 */
+            padding: 25px 40px;
+            border-bottom: 4px solid var(--accent); /* 하단 테두리 강조 */
+            box-shadow: 0 5px 15px rgba(0,0,0,0.7);
         }
         .asset-btn { 
-            padding: 12px 24px; background: #0d1117; border: 2px solid var(--border); 
-            color: var(--text-sub); cursor: pointer; font-size: 0.9rem; transition: 0.2s;
+            padding: 12px 24px; 
+            background: #21262d; /* 버튼 기본 배경색 변경 */
+            border: 2px solid var(--border); 
+            color: var(--text-main); /* 글자색 밝게 */
+            cursor: pointer; font-size: 0.95rem; transition: 0.2s;
             font-weight: bold;
         }
-        .asset-btn.active { background: var(--accent); color: #0d1117; border-color: #fff; box-shadow: 4px 4px 0 rgba(0,0,0,0.3); }
+        .asset-btn:hover { 
+            border-color: var(--accent); 
+            color: var(--accent); 
+            background: var(--accent-dim);
+        }
+        .asset-btn.active { 
+            background: var(--accent); 
+            color: #0d1117; /* 활성 상태 글자색 반전 */
+            border-color: var(--accent);
+            box-shadow: 0 0 10px var(--accent); /* 활성 상태 강조 효과 */
+        }
 
         /* 뷰어 영역 */
         .viewer-container { width: 100%; min-height: 680px; background: #000; position: relative; padding: 20px 0; }
@@ -157,6 +173,7 @@
             .skills-wrapper, .project-container { grid-template-columns: 1fr; } 
             .modal-img-container { height: 220px; }
             .asset-viewer, .video-wrapper { height: 400px; }
+            .asset-selector { padding: 15px 20px; }
         }
     </style>
 </head>
@@ -268,7 +285,7 @@
         function openModal(i) {
             const p = projects[i];
             
-            // [수정] 모달을 열 때마다 스크롤 위치를 최상단(0)으로 강제 초기화
+            // 모달 열 때 스크롤 초기화
             const modalContent = document.querySelector('.modal-content');
             if (modalContent) modalContent.scrollTop = 0;
 
