--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             overflow-x: hidden;
         }
 
-        /* --- 1. 인트로 오버레이 (성함 영문 복구) --- */
+        /* --- 1. 인트로 오버레이 --- */
         #intro-overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: #000; z-index: 10000; display: flex; flex-direction: column;
@@ -43,10 +43,10 @@
             padding: 15px 35px; background: var(--accent); color: #0d1117;
             border: none; cursor: pointer; font-weight: bold;
             box-shadow: -4px 0 0 0 #000, 4px 0 0 0 #000, 0 -4px 0 0 #000, 0 4px 0 0 #000;
-            transition: 0.1s; font-size: 1.1rem;
+            transition: 0.1s; font-size: 1.1rem; text-decoration: none; display: inline-block;
         }
 
-        /* --- 2. 히어로 섹션 (롤링 배경 복구) --- */
+        /* --- 2. 히어로 섹션 (롤링 배경) --- */
         .hero {
             position: relative; width: 100%; height: 320px;
             display: flex; align-items: center; justify-content: center;
@@ -61,14 +61,13 @@
         .hero-content h1 { font-size: 2.2rem; color: var(--accent); margin: 0; text-shadow: 3px 3px #000; }
         .hero-content p { font-size: 1.1rem; color: #fff; margin-top: 15px; background: rgba(0,0,0,0.5); display: inline-block; padding: 5px 15px; }
 
-        /* --- 3. 보유 기술 (PLAYER ABILITIES 복구) --- */
+        /* --- 3. 보유 기술 (PLAYER ABILITIES) --- */
         .section-title { max-width: 1100px; margin: 60px auto 25px; padding: 0 20px; font-size: 1.3rem; color: var(--accent); letter-spacing: 2px; text-align: left; }
         .skills-wrapper { max-width: 1100px; margin: 0 auto 60px; padding: 0 20px; display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; }
         .skill-group { background: var(--card); border: 2px solid var(--border); padding: 20px; display: flex; flex-direction: column; gap: 8px; }
         .skill-group-title { font-size: 0.95rem; color: var(--accent); text-align: left; border-bottom: 2px solid var(--border); padding-bottom: 10px; margin-bottom: 12px; }
         .skill-item { display: flex; flex-direction: column; align-items: flex-start; justify-content: center; text-align: left; padding: 4px 0; }
         .skill-name { font-size: 0.9rem; color: var(--text-main); font-weight: bold; }
-        .stars { color: #ffff00; font-size: 0.7rem; }
         .skill-desc { color: var(--text-sub); font-size: 0.8rem; line-height: 1.3; }
 
         /* --- 4. 프로젝트 리스트 --- */
@@ -82,7 +81,7 @@
         .tag { font-size: 0.6rem; color: var(--accent); margin-bottom: 8px; display: block; }
         .project-card h3 { font-size: 1rem; margin: 0; color: #fff; line-height: 1.4; }
 
-        /* --- 5. 모달 시스템 디자인 --- */
+        /* --- 5. 모달 시스템 및 상세 디자인 --- */
         .modal { 
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
             background: rgba(0,0,0,0.9); z-index: 10001; justify-content: center; align-items: center; 
@@ -94,7 +93,6 @@
             overflow-y: auto; position: relative;
             box-shadow: 0 0 50px rgba(0,0,0,0.8);
         }
-        
         .close-pixel { 
             position: sticky; top: 20px; right: 20px; 
             float: right; color: var(--accent); font-size: 1rem; cursor: pointer; 
@@ -103,10 +101,9 @@
             box-shadow: 4px 4px 0 var(--accent);
         }
         .close-pixel:hover { background: var(--accent); color: #000; }
-
         .modal-inner-padding { padding: 50px; clear: both; }
 
-        /* 모달 이미지 프레임 */
+        /* 사진 크기 통일 및 안 잘리게 */
         .modal-img-container {
             width: 100%; height: 350px;
             background: #000; margin-bottom: 35px;
@@ -116,36 +113,36 @@
         }
         .modal-img { max-width: 100%; height: 100%; object-fit: contain; }
 
-        /* 텍스트 패널 */
         .project-info-header { border-left: 4px solid var(--accent); padding-left: 25px; margin-bottom: 40px; text-align: left; }
         .project-info-header h2 { font-size: 1.8rem; color: var(--accent); margin-bottom: 10px; }
         
-        /* 탭 버튼 시인성 강화 */
+        /* 탭 버튼 시각적 강화 */
         .asset-selector { 
             display: flex; gap: 12px; flex-wrap: wrap; justify-content: flex-start;
             position: sticky; top: 0; z-index: 1000;
             background: #161b22; padding: 25px 40px;
             border-bottom: 4px solid var(--accent);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.7);
         }
         .asset-btn { 
             padding: 12px 24px; background: #21262d; border: 2px solid var(--border); 
             color: var(--text-main); cursor: pointer; font-size: 0.95rem; transition: 0.2s;
             font-weight: bold;
         }
-        .asset-btn:hover { border-color: var(--accent); color: var(--accent); }
         .asset-btn.active { background: var(--accent); color: #0d1117; border-color: #fff; box-shadow: 0 0 10px var(--accent); }
 
-        /* 뷰어 영역 */
+        /* 컨텐츠 뷰어 영역 */
         .viewer-container { width: 100%; min-height: 700px; background: #000; padding: 30px 0; }
-        .asset-viewer { width: 96%; height: 700px; border: 2px solid var(--border); display: none; margin: 0 auto; }
+        .asset-viewer { width: 96%; height: 700px; border: none; display: none; margin: 0 auto; }
         .asset-viewer.active { display: block; }
 
-        .link-viewer-container {
+        /* 외부 링크 및 다운로드 박스 스타일 */
+        .custom-viewer-container {
             display: none; flex-direction: column; align-items: center; justify-content: center;
-            width: 96%; height: 400px; margin: 0 auto; background: #161b22; border: 2px dashed var(--accent);
+            width: 96%; height: 450px; margin: 0 auto; background: #161b22; 
+            border: 2px dashed var(--accent); text-align: center;
         }
-        .link-viewer-container.active { display: flex; }
+        .custom-viewer-container.active { display: flex; }
+        .file-icon { font-size: 3.5rem; color: #217346; margin-bottom: 20px; }
 
         .video-wrapper { width: 100%; height: 700px; display: flex; align-items: center; justify-content: center; }
         .video-wrapper iframe { width: 83%; height: 83%; border: 1px solid var(--accent); }
@@ -200,7 +197,7 @@
             <div class="skill-group-title">개발 & 엔진</div>
             <div class="skill-item"><div class="skill-name">Gamemaker ★★★★☆</div><div class="skill-desc">축구+리듬 하이브리드 기획</div></div>
             <div class="skill-item"><div class="skill-name">Unity ★★★☆☆</div><div class="skill-desc">엔진 기반 협업 및 기능 활용</div></div>
-            <div class="skill-item"><div class="skill-name">Gemini ★★★★☆</div><div class="skill-desc">AI 협업 및 자료 정리</div></div>
+            <div class="skill-item"><div class="skill-name">Gemini ★★★★☆</div><div class="skill-desc">AI 협업 및 데이터 시각화</div></div>
             <div class="skill-item"><div class="skill-name">NotebookLM ★★★★☆</div><div class="skill-desc">설정 분석 및 검증</div></div>
         </div>
     </div>
@@ -242,30 +239,32 @@
             { 
                 title: "KOKODUGI (코코두기)", tag: "PARTY QUEST", 
                 desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다.", 
-                achievements: "<li>15종 이상의 기획 문서 노션 아카이빙</li><li>사용자 경험 중심의 단계적 튜토리얼 설계</li>", img: "P2.png", 
+                achievements: "<li>VBA 기반 데이터 매니저 제작</li><li>15종 이상의 기획 문서 아카이빙</li>", img: "P2.png", 
                 assets: [
-                    // [요청 반영] 코코두기 플레이 영상 1순위 노출
                     { type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/Y4jyfOewBBM?enablejsapi=1" },
+                    { type: "video", title: "VBA 도구 시연", url: "https://www.youtube.com/embed/KfmdTe9rUjM?enablejsapi=1" },
                     { type: "pdf", title: "프로젝트 보고서", url: "P2_1.pdf" },
+                    { type: "download", title: "데이터 매니저 (Excel)", url: "KOKO_Data_Manager.xlsm" },
                     { type: "link", title: "상세 기획 (노션)", url: "https://www.notion.so/2bedfa2a48818195bbcdc00abec311d2?source=copy_link" }
                 ] 
             },
-            { title: "밸런스 개선 제안", tag: "PLAYER-DRIVEN PROPOSAL", desc: "라이브 지표 분석을 통해 개선안을 도출한 실무형 프로젝트입니다.", achievements: "<li>로빙 스루 패스 지표 분석</li><li>수비 AI 개선 영향 분석</li>", img: "P3.png", assets: [ { type: "pdf", title: "밸런스 개선안", url: "P3_1_개선사항.pdf" }, { type: "pdf", title: "영향 분석서", url: "P3_2_게임분석서.pdf" } ] },
+            { title: "밸런스 개선 제안", tag: "PLAYER-DRIVEN PROPOSAL", desc: "라이브 지표 분석을 통해 개선안을 도출한 실무형 프로젝트입니다.", achievements: "<li>로빙 스루 패스 지표 분석</li><li>수비 AI 개선 영향 분석</li>", img: "P3.png", assets: [ { type: "pdf", title: "밸런스 개선안", url: "P3_1_개선사항.pdf" }, { type: "pdf", title: "업데이트 이후 영향 분석서", url: "P3_2_게임분석서.pdf" } ] },
             { title: "감독의 전술 노트", tag: "SYSTEM DESIGN", desc: "성장의 재미를 극대화하는 수집 시스템 제안서입니다.", achievements: "<li>성장 코어 루프 설계</li><li>시즌 패스 BM 모델링</li>", img: "P4.png", assets: [{ type: "pdf", title: "신규 제안서", url: "P4_1_신규 시스템 제안서.pdf" }] },
             { title: "공공 야간약국 선정", tag: "DATA ANALYSIS", desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다.", achievements: "<li>복합 가중치 분석 모델 설계</li><li>QGIS 시각화 산출</li>", img: "P5.png", assets: [{ type: "pdf", title: "데이터 분석", url: "P5_데이터분석.pdf" }] }
         ];
 
         function openModal(i) {
             const p = projects[i];
-            const modal = document.getElementById('projectModal');
-            const modalContent = modal.querySelector('.modal-content');
-            if (modalContent) modalContent.scrollTop = 0;
+            const modalContent = document.querySelector('.modal-content');
+            modalContent.scrollTop = 0;
 
             let viewersHtml = p.assets.map((as, idx) => {
                 if(as.type === 'video') {
                     return `<div class="asset-viewer ${idx===0?'active':''}" id="view-${idx}"><div class="video-wrapper"><iframe src="${as.url}" allowfullscreen></iframe></div></div>`;
                 } else if(as.type === 'link') {
-                    return `<div class="link-viewer-container ${idx===0?'active':''}" id="view-${idx}"><p style="margin-bottom:20px; font-size:1.1rem; color:var(--accent);">방대한 기획 명세서를 노션에서 직접 확인하세요.</p><a href="${as.url}" target="_blank" class="btn-pixel" style="text-decoration:none;">OPEN NOTION LINK</a></div>`;
+                    return `<div class="custom-viewer-container ${idx===0?'active':''}" id="view-${idx}"><p style="margin-bottom:20px; font-size:1.1rem; color:var(--accent);">전체 기획 문서를 노션에서 확인하세요.</p><a href="${as.url}" target="_blank" class="btn-pixel">OPEN NOTION LINK</a></div>`;
+                } else if(as.type === 'download') {
+                    return `<div class="custom-viewer-container ${idx===0?'active':''}" id="view-${idx}"><i class="fas fa-file-excel file-icon"></i><p style="margin-bottom:10px; font-size:1.1rem; color:var(--accent);">VBA 데이터 매니저 (실제 파일)</p><p style="margin-bottom:25px; font-size:0.85rem; color:var(--text-sub);">* 매크로가 포함된 작업 원본 파일을 다운로드합니다.</p><a href="${as.url}" download class="btn-pixel">💾 파일 다운로드 (.xlsm)</a></div>`;
                 } else {
                     return `<iframe class="asset-viewer ${idx===0?'active':''}" id="view-${idx}" src="${as.url}#toolbar=0"></iframe>`;
                 }
@@ -277,12 +276,12 @@
                 <div class="modal-inner-padding">
                     <div class="modal-img-container"><img src="${p.img}" class="modal-img"></div>
                     <div class="project-info-header"><span style="color:#8b949e; font-weight:bold; font-size:0.9rem; display:block; margin-bottom:10px;">[ ${p.tag} ]</span><h2>${p.title}</h2><p style="font-size:1.1rem; color:#eee; max-width:800px;">${p.desc}</p></div>
-                    <div class="info-box"><h4>핵심 성과</h4><ul>${p.achievements}</ul></div>
+                    <div class="info-box"><h4>주요 성과</h4><ul>${p.achievements}</ul></div>
                 </div>
                 <div class="asset-selector">${buttonsHtml}</div>
                 <div class="viewer-container">${viewersHtml}</div>
             `;
-            modal.style.display = 'flex';
+            document.getElementById('projectModal').style.display = 'flex';
             document.body.style.overflow = 'hidden';
             setTimeout(() => { modalContent.scrollTop = 0; }, 10);
         }
@@ -290,9 +289,14 @@
         function switchTab(btn, idx) {
             document.querySelectorAll('.video-wrapper iframe').forEach(ifr => { ifr.contentWindow.postMessage('{"event":"command","func":"pauseVideo","args":""}', '*'); });
             document.querySelectorAll('.asset-btn').forEach(b => b.classList.remove('active'));
-            document.querySelectorAll('.asset-viewer, .link-viewer-container').forEach(v => v.classList.remove('active'));
+            document.querySelectorAll('.asset-viewer, .custom-viewer-container').forEach(v => {
+                v.classList.remove('active');
+                if(!v.tagName.includes('IFRAME')) v.style.display = 'none';
+            });
             btn.classList.add('active');
-            document.getElementById(`view-${idx}`).classList.add('active');
+            const target = document.getElementById(`view-${idx}`);
+            target.classList.add('active');
+            if(!target.tagName.includes('IFRAME')) target.style.display = 'flex';
         }
 
         function closeModal() { document.getElementById('projectModal').style.display = 'none'; document.body.style.overflow = 'auto'; }
